--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   <title>Document</title>
 </head>
 <body>
-  
+  <div class="container">
+    <h1>Click here to see a list of every card in a deck of cards</h1>
+    <button type="submit" class="btn btn-primary" id="submitButton">Submit</button>
+    
+    <ul id="cards">
+    </ul>
+
+  </div>
 </body>
 </html>
